# profiling_qwen2b_vl_instruction

./: .gitignore  README.md  build_genai.ps1  build_genai.sh  build_genai_wheel.ps1  cvt_ov.sh  run_genai_benchmark.sh  run_genai_pytest.ps1  run_genai_pytest.sh  run_genai_sample.sh  run_genai_wheel_pytest.ps1  run_ov_benchmarkapp.sh  source_ov.sh
example_cpp/: main.cpp
example_ov_cpp/: .gitignore  CMakeLists.txt  llm_cdpruner.cpp  llm_eagle3.cpp  llm_lookup.cpp  load_image.cpp  load_image.hpp  main.cpp  my_build.ps1  my_build.sh  my_run.sh  my_run_custom_vit.ps1  my_run_custom_vit.sh  my_utils.hpp  position_ids_genai.txt
example_ov_py/: .gitignore  resize_img.py  run.sh  run_genai_custom_vit.ps1  test_add_extension.py  test_benchmark_vlm.bat  test_llm_genai.py  test_pipeline.py  test_pipeline_genai.py  test_pipeline_genai_eagle3.py  test_pipeline_optimum.py  test_vlm_continuous_batching_generate_vs_add_request.py  test_vlm_lookup.py
example_py/: test_pipeline.py
example_python/: .gitignore  README.md  example.py  example_qwen3_5.py  example_qwen3_omni.py  example_utils.py  export_ov.sh  run.sh  run_qwen3_5.sh  run_qwen3omni.sh  test.py  test_qwen3_5.py
example_python/dflash_test/: .gitignore  README.md  export_draft_model_instructions.md  export_qwen3_ov_model.sh  run.sh  sample.py
example_python/whisper/: example.py
test_video/: video_to_img.py
